--- a/index.html
+++ b/index.html
@@ -49,15 +49,13 @@
     <div class="faq-item">
         <p><strong>开发者：</strong>yubaoyang</p>
         <p><strong>联系邮箱：</strong><a href="yubaoyang@email.cn">your.email@example.com</a></p>
-        <p><strong>GitHub：</strong><a href="https://github.com/yourusername">@yourusername</a></p>
     </div>
 
     <h2>联系我们</h2>
     <p>如果您有功能建议、发现了 Bug 或者有任何疑问，欢迎通过以下方式联系我们：</p>
     
     <p>
-        <a href="mailto:your.email@example.com" class="contact-btn">发送邮件</a>
-        <a href="https://github.com/yourusername/where/issues" class="contact-btn">在 GitHub 上提交反馈</a>
+        <a href="yubaoyang@email.cn" class="contact-btn">发送邮件</a>
     </p>
     
     <div class="footer">
