--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
     <h2>开发者信息</h2>
     <div class="faq-item">
         <p><strong>开发者：</strong>yubaoyang</p>
-        <p><strong>联系邮箱：</strong><a href="yubaoyang@email.cn">your.email@example.com</a></p>
+        <p><strong>联系邮箱：</strong><a href="yubaoyang@email.cn">yubaoyang@email.cn</a></p>
     </div>
 
-    <h2>联系我们</h2>
-    <p>如果您有功能建议、发现了 Bug 或者有任何疑问，欢迎通过以下方式联系我们：</p>
-    
-    <p>
-        <a href="yubaoyang@email.cn" class="contact-btn">发送邮件</a>
-    </p>
+    <h2>联系我们: yubaoyang@email.cn</h2>
+
     
     <div class="footer">
         <p>&copy; 2026 啄米藏. 开发者：yubaoyang</p>
