--- a/privacy.html
+++ b/privacy.html
@@ -49,7 +49,7 @@
     <h2>5. 联系我们要</h2>
     <p>如果您对本隐私政策有任何疑问，请通过以下方式联系我们：</p>
     <ul>
-        <li>联系邮箱: <a href="yubaoyang@email.cn">提交反馈</a></li>
+        <li>联系邮箱: <a href="mailto:yubaoyang@email.cn">yubaoyang@email.cn</a></li>
     </ul>
 </body>
 </html>
