--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
         <p><strong>联系邮箱：</strong><a href="yubaoyang@email.cn">yubaoyang@email.cn</a></p>
     </div>
 
-    <h2>联系我们: yubaoyang@email.cn</h2>
-
+    <h2>联系我们</h2>
+    <p>如果您有功能建议、发现了 Bug 或者有任何疑问，欢迎通过以下方式联系我们：</p>
+    <p>
+        <a href="mailto:yubaoyang@email.cn" class="contact-btn">发送邮件</a>
+    </p>
     
     <div class="footer">
         <p>&copy; 2026 啄米藏. 开发者：yubaoyang</p>
